--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase-auth": "^0.1.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-elements": "^0.19.1",
     "react-native-ui-kitten": "^3.1.2",
     "react-navigation": "^2.18.2",
     "tcomb-form-native": "^0.6.20"
